add nav feature

--- a/main.css
+++ b/main.css
@@ -4,6 +4,6 @@
 }
 .container {
     width: 80%;
-    background: #ddd;
-    height: 100px;
+    /* background: #ddd; */
+    /* height: 100px; */
 }
